<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_manager"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:text="@string/View"
        android:layout_alignTop="@+id/title"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="150dp"
        android:text="@string/Create"
        android:layout_alignTop="@+id/btnView"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
</android.widget.RelativeLayout>